--- a/src/app.json
+++ b/src/app.json
@@ -1,45 +1,43 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/my/main"
+    "pages/tuan/main",
+    "pages/order/main",
+    "pages/my/main",
+    "pages/list/main",
+    "pages/detail/main"
   ],
   "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "微信接口功能演示",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light"
   },
   "tabBar": {
-    "color": "#999",
-    "backgroundColor": "#fafafa",
-    "selectedColor": "#333",
-    "borderStyle": "white",
-
     "list": [{
       "text": "首页",
       "pagePath": "pages/index/main",
       "iconPath": "static/tabs/home.png",
       "selectedIconPath": "static/tabs/home-active.png"
     },{
-      "text": "我的",
-      "pagePath": "pages/my/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
-    }
-    ],
-
-    "items": [{
-      "name": "首页",
-      "pagePath": "pages/index/main",
-      "icon": "static/tabs/home.png",
-      "activeIcon": "static/tabs/home-active.png"
+      "text": "活动",
+      "pagePath": "pages/tuan/main",
+      "iconPath": "static/tabs/tuan.png",
+      "selectedIconPath": "static/tabs/tuan-active.png"
+    },{
+      "text": "订单",
+      "pagePath": "pages/order/main",
+      "iconPath": "static/tabs/orders.png",
+      "selectedIconPath": "static/tabs/orders-active.png"
     },
       {
-        "name": "我的",
+        "text": "我的",
         "pagePath": "pages/my/main",
-        "icon": "static/tabs/home.png",
-        "activeIcon": "static/tabs/home-active.png"
-      }],
+        "iconPath": "static/tabs/my.png",
+        "selectedIconPath": "static/tabs/my-active.png"
+      }
+    ],
     "position": "bottom"
   }
 }
