--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
-    "mpvue": "^2.0.0",
-    "axios": "^0.18.0"
+    "mpvue": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
