--- a/src/app.json
+++ b/src/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/navlist/main",
     "pages/index/main",
     "pages/tuan/main",
     "pages/order/main",
@@ -17,7 +18,7 @@
   "tabBar": {
     "list": [{
       "text": "首页",
-      "pagePath": "pages/index/main",
+      "pagePath": "pages/navlist/main",
       "iconPath": "static/tabs/home.png",
       "selectedIconPath": "static/tabs/home-active.png"
     },{
