--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
+    "less": "^3.10.1",
+    "less-loader": "^5.0.0",
     "mpvue": "^2.0.0"
   },
   "devDependencies": {
