--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
-    "mpvue": "^2.0.0"
+    "mpvue": "^2.0.0",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
