--- a/src/app.json
+++ b/src/app.json
@@ -6,7 +6,14 @@
     "pages/my/main",
     "pages/list/main",
     "pages/detail/main",
-    "pages/mysetting/main"
+    "pages/mysetting/main",
+    "pages/help/main",
+    "pages/myaddress/main",
+    "pages/newaddress/main",
+    "pages/balancequestion/main",
+    "pages/couponquestion/main",
+    "pages/memberquestion/main",
+    "pages/complaint/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
