新增会员模块

--- a/src/app.json
+++ b/src/app.json
@@ -16,7 +16,8 @@
     "pages/complaint/main",
     "pages/point/main",
     "pages/balance/main",
-    "pages/coupon/main"
+    "pages/coupon/main",
+    "pages/myvip/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
