新增积分兑换

--- a/src/app.json
+++ b/src/app.json
@@ -18,7 +18,8 @@
     "pages/balance/main",
     "pages/coupon/main",
     "pages/myvip/main",
-    "pages/buyvip/main"
+    "pages/buyvip/main",
+    "pages/pointredeem/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
