新增积分兑换详情

--- a/src/app.json
+++ b/src/app.json
@@ -19,7 +19,8 @@
     "pages/coupon/main",
     "pages/myvip/main",
     "pages/buyvip/main",
-    "pages/pointredeem/main"
+    "pages/pointredeem/main",
+    "pages/redeemdetail/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
