--- a/src/app.json
+++ b/src/app.json
@@ -60,5 +60,10 @@
       }
     ],
     "position": "bottom"
+  },
+  "permission":{
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
   }
 }
