新增logout功能&新增设置页面

--- a/src/app.json
+++ b/src/app.json
@@ -26,7 +26,8 @@
     "pages/mission/main",
     "pages/login/main",
     "pages/phonelogin/main",
-    "pages/comments/main"
+    "pages/comments/main",
+    "pages/setting/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
