--- a/src/app.json
+++ b/src/app.json
@@ -37,27 +37,29 @@
     "backgroundTextStyle": "light"
   },
   "tabBar": {
+    "color": "#000000",
+    "selectedColor": "#000000",
     "list": [{
       "text": "首页",
       "pagePath": "pages/index/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
+      "iconPath": "static/bar/default/home.png",
+      "selectedIconPath": "static/bar/active/home_fill.png"
     },{
       "text": "购物车",
       "pagePath": "pages/cart/main",
-      "iconPath": "static/tabs/tuan.png",
-      "selectedIconPath": "static/tabs/tuan-active.png"
+      "iconPath": "static/bar/default/cart.png",
+      "selectedIconPath": "static/bar/active/cart_fill.png"
     },{
       "text": "订单",
       "pagePath": "pages/order/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
+      "iconPath": "static/bar/default/order.png",
+      "selectedIconPath": "static/bar/active/order_fill.png"
     },
       {
         "text": "我的",
         "pagePath": "pages/my/main",
-        "iconPath": "static/tabs/my.png",
-        "selectedIconPath": "static/tabs/my-active.png"
+        "iconPath": "static/bar/default/me.png",
+        "selectedIconPath": "static/bar/active/me_fill.png"
       }
     ],
     "position": "bottom"
