--- a/src/app.json
+++ b/src/app.json
@@ -28,7 +28,9 @@
     "pages/phonelogin/main",
     "pages/comments/main",
     "pages/setting/main",
-    "pages/evaluation/main"
+    "pages/evaluation/main",
+    "pages/demo/main"
+
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
