--- a/src/app.json
+++ b/src/app.json
@@ -30,6 +30,7 @@
     "pages/setting/main",
     "pages/evaluation/main",
     "pages/demo/main",
+    "pages/demo2/main",
     "pages/starvip/main",
     "pages/vip/main"
 
