--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
     "mpvue": "^2.0.0",
+    "numeral": "^2.0.6",
+    "vue": "^2.5.16",
+    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@babel/generator": "^7.10.3",
     "babel-core": "^6.22.1",
+    "babel-generator": "^6.26.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
@@ -53,7 +58,7 @@
     "mpvue-loader": "^2.0.0",
     "mpvue-template-compiler": "^2.0.0",
     "mpvue-webpack-target": "^1.0.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
@@ -69,7 +74,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
-    "webpack": "^3.11.0",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
